--- a/apps/frontend/src/app/pages/landing/landing.component.html
+++ b/apps/frontend/src/app/pages/landing/landing.component.html
@@ -18,6 +18,6 @@
 </div>
 
     <div class="absolute bottom-6 text-sm opacity-80">
-        <p>&copy; 2025 PennyTask. All rights reserved.</p>
+        <p>&copy; 2025 Developed By Maram </p>
     </div>
 </div>
